# cidr-group-central

./: README.md  pyproject.toml  requirements.txt
cidr-group-central/: cidr_group.py  settings.py
