[tool.poetry]
name = "cidr-group-central"
version = "0.1.0"
description = ""
authors = ["Christopher Hutchins"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
boto3 = "^1.34.159"
pytest = "^8.3.2"
asyncio = "^3.4.3"
aiohttp = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
